--- a/srlc/srl/templates/srl/faq copy.html
+++ b/srlc/srl/templates/srl/faq copy.html
@@ -13,7 +13,7 @@
         <link rel="icon" href="{% static 'srl/imgs/favicon.png' %}" type="image/x-icon">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-        {% load bootstdjango_bootstrap5rap5 %}
+        {% load django_bootstrap5 %}
         {% bootstrap_css %}
         {% bootstrap_javascript %}
 
