Reverted template change
Removed copies of changelog, faq, and privacy_policy; current ones are the ones for thps.run. Modification needed for other sites.

--- a/srlc/srl/templates/srl/faq.html
+++ b/srlc/srl/templates/srl/faq.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="keywords" content="speedrun, leaderboards, thps, thps1, thps2, thps, World Record, Personal Best">
         
-        <title>Changelog - thps.run</title>
+        <title>FAQ - thps.run</title>
         
         <link rel="icon" href="{% static 'srl/imgs/favicon.png' %}" type="image/x-icon">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
