--- a/srlc/srl/templates/srl/changelog.html
+++ b/srlc/srl/templates/srl/changelog.html
@@ -30,7 +30,7 @@
             </thead>
             <tbody>
                 <td>
-                    | <a href="#v22">v2.2 - The Maintenance Update</a> | <br />
+                    | <a href="#v22">v2.2 - The BIG Update</a> | <br />
                     | <a href="#v21">v2.1 - The API Update</a> | <a href="#v2101">v2.1.0.1</a> | <a href="#v211">v2.1.1</a> | <a href="#v212">v2.1.2</a> | <a href="#v213">v2.1.3</a> | <a href="#v214">v2.1.4</a> | <a href="v215">v2.1.5</a> | <a href="v216">v2.1.6</a> | <a href="v217">v2.1.7</a> | <br/>
                     | <a href="#v2">v2.0 - The Fucking Finally Update</a> | <a href="#v201">v2.0.1</a> | <a href="#v202">v2.0.2</a> | <a href="#v203">v2.0.3</a> | <a href="#v204">v2.0.4</a> | <a href="#v205">v2.0.5</a> | <a href="#v2051">v2.0.5.1</a> |
                     <hr />
@@ -38,7 +38,7 @@
             </tbody>
             <tbody>
                 <td>
-                    <h3 id="v22">v2.2 - The Maintenance Update</h3>
+                    <h3 id="v22">v2.2 - The BIG Update</h3>
                     <h6>January 31, 2024</h6>
                     <ul>
                         <li>Added the Awards Model.
