--- a/srlc/srl/templates/srl/main.html
+++ b/srlc/srl/templates/srl/main.html
@@ -24,17 +24,17 @@
             <div class="main-table">
                 <table id="leaderboard-table-1" class="table table-striped main-wrs">
                     <thead>
-                        <tr class="bg-info">
-                            <th colspan="5">Current World Records</th>
+                        <tr>
+                            <th colspan="5"class="bg-info">Current World Records</th>
                         </tr>
                     </thead>
                     <thead>
-                        <tr class="bg-info">
-                            <th>Game</th>
-                            <th>Category</th>
-                            <th>Player</th>
-                            <th>Time</th>
-                            <th>Date</th>
+                        <tr>
+                            <th class="bg-info">Game</th>
+                            <th class="bg-info">Category</th>
+                            <th class="bg-info">Player</th>
+                            <th class="bg-info">Time</th>
+                            <th class="bg-info">Date</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -72,16 +72,16 @@
                 <div class="latest-wrs">
                     <table id="leaderboard-table-2" class="table table-striped">
                         <thead>
-                            <tr class="bg-info">
-                                <th colspan="4">Latest World Records</th>
+                            <tr>
+                                <th colspan="4" class="bg-info">Latest World Records</th>
                             </tr>
                         </thead>
                         <thead>
-                            <tr class="bg-info">
-                                <th>Game</th>
-                                <th>Category</th>
-                                <th>Player</th>
-                                <th>Time</th>
+                            <tr>
+                                <th class="bg-info">Game</th>
+                                <th class="bg-info">Category</th>
+                                <th class="bg-info">Player</th>
+                                <th class="bg-info">Time</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -121,16 +121,16 @@
                 <div class="latest-runs">
                     <table id="leaderboard-table-3" class="table table-striped">
                         <thead>
-                            <tr class="bg-info">
-                                <th colspan="4">Latest Runs</th>
+                            <tr>
+                                <th colspan="4" class="bg-info">Latest Runs</th>
                             </tr>
                         </thead>
                         <thead>
-                            <tr class="bg-info">
-                                <th>Game</th>
-                                <th>Category</th>
-                                <th>Player</th>
-                                <th>Time</th>
+                            <tr>
+                                <th class="bg-info">Game</th>
+                                <th class="bg-info">Category</th>
+                                <th class="bg-info">Player</th>
+                                <th class="bg-info">Time</th>
                             </tr>
                         </thead>
                         <tbody>
