--- a/srlc/srl/templates/srl/ol_leaderboard.html
+++ b/srlc/srl/templates/srl/ol_leaderboard.html
@@ -21,12 +21,12 @@
         {% include 'srl/navbar.html' %}
         <br />
         <table id="leaderboard-table" class="table table-striped">
-            <thead class="bg-info">
+            <thead>
                 <tr>
-                    <th>Country</th>
-                    <th>&#129351;</th>
-                    <th>&#129352;</th>
-                    <th>&#129353;</th>
+                    <th class="bg-info">Country</th>
+                    <th class="bg-info">&#129351;</th>
+                    <th class="bg-info">&#129352;</th>
+                    <th class="bg-info">&#129353;</th>
                 </tr>
             </thead>
             <tbody>
