--- a/srlc/srl/templates/srl/rg_leaderboard.html
+++ b/srlc/srl/templates/srl/rg_leaderboard.html
@@ -32,11 +32,11 @@
         </form>
         
         <table id="leaderboard-table" class="table table-striped">
-            <thead class="bg-info">
+            <thead>
                 <tr>
-                    <th>Rank</th>
-                    <th>Player</th>
-                    <th>Points</th>
+                    <th class="bg-info">Rank</th>
+                    <th class="bg-info">Player</th>
+                    <th class="bg-info">Points</th>
                 </tr>
             </thead>
             <tbody>
