--- a/srlc/srl/templates/srl/faq.html
+++ b/srlc/srl/templates/srl/faq.html
@@ -23,9 +23,9 @@
         {% include 'srl/navbar.html' %}
         <br />
         <table id="privacy" class="privacy">
-            <thead class="bg-info">
+            <thead>
                 <tr>
-                    <th colspan="3" id="top">thps.run FAQ</th>
+                    <th colspan="3" id="top" class="bg-info">thps.run FAQ</th>
                 </tr>
             </thead>
             <tbody>
