Bug fixing; removed olympics and regional boards

--- a/srlc/srl/templates/srl/il_leaderboard_expanded.html
+++ b/srlc/srl/templates/srl/il_leaderboard_expanded.html
@@ -79,13 +79,13 @@
                     <table id="leaderboardTable" class="table table-striped">
                         <thead class="bg-info">
                             <tr>
-                                <th colspan="2">Record Counts</th>
+                                <th colspan="2" class="bg-info">Record Counts</th>
                             </tr>
                         </thead>
                         <thead class="bg-info">
                             <tr>
-                                <th>Player</th>
-                                <th>Records</th>
+                                <th class="bg-info">Player</th>
+                                <th class="bg-info">Records</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -122,14 +122,14 @@
                     <table id="leaderboardTable" class="table table-striped">
                         <thead>
                             <tr class="bg-info">
-                                <th colspan="4">Oldest Records</th>
+                                <th colspan="4" class="bg-info">Oldest Records</th>
                             </tr>
                         </thead>
                         <thead>
                             <tr class="bg-info">
-                                <th>IL</th>
-                                <th>Time</th>
-                                <th>Date</th>
+                                <th class="bg-info">IL</th>
+                                <th class="bg-info">Time</th>
+                                <th class="bg-info">Date</th>
                             </tr>
                         </thead>
                         <tbody>
