--- a/srlc/srl/templates/srl/main.html
+++ b/srlc/srl/templates/srl/main.html
@@ -70,7 +70,7 @@
 
             <div class="side-table">
                 <div class="latest-wrs">
-                    <table id="leaderboard-table-2" class="table table-striped">
+                    <table  class="table table-striped">
                         <thead>
                             <tr>
                                 <th colspan="4" class="bg-info">Latest World Records</th>
