"Fixed" leaderboard timings

--- a/srlc/srl/templates/srl/changelog.html
+++ b/srlc/srl/templates/srl/changelog.html
@@ -69,7 +69,7 @@
                             <ul>
                                 <li>/lbs/thps1/ -> <a href="/thps1/">/thps1/</a> -- Primary RTA leaderboard</li>
                                 <li>/lbs/ils/thps1/ -> <a href="/thps1/ils">/thps1/ils/</a> -- Primary IL leaderboard</li>
-                                <li>/lbs/all/thps1/ -> <a href="/thps1/points">/thps1/points/</a> -- Game Points Leaderboard</li>
+                                <li>/lbs/all/thps1/ -> <a href="/thps1/all">/thps1/all/</a> -- Game Points Leaderboard</li>
                             </ul>
                             <li>With this change, there will be no redirects; please update your links accordingly.</li>
                         </li>
